--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Hacker News</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header class="header">
+      <nav class="container flex justify-between items-center">
+        <h2>Hacker News</h2>
+
+        <ul class="flex">
+          <li>
+            <i class="fas fa-moon"></i>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
