Add: Static news item cards and footer

--- a/index.html
+++ b/index.html
@@ -35,5 +35,72 @@
         </ul>
       </nav>
     </header>
+
+    <main class="container main">
+      <section class="news-lists">
+        <div class="news-item flex justify-between items-center">
+          <div class="flex items-center">
+            <div class="news-item__points">
+              <p>200</p>
+              <span>points</span>
+            </div>
+
+            <div>
+              <h3>This is some test news</h3>
+              <p>posted by abc 8 hours ago | 18 comments</p>
+            </div>
+          </div>
+
+          <div class="news-item__bookmark">
+            <i class="fas fa-heart"></i>
+          </div>
+        </div>
+
+        <div class="news-item flex justify-between items-center">
+          <div class="flex items-center">
+            <div class="news-item__points">
+              <p>200</p>
+              <span>points</span>
+            </div>
+
+            <div>
+              <h3>This is some test news</h3>
+              <p>posted by abc 8 hours ago | 18 comments</p>
+            </div>
+          </div>
+
+          <div class="news-item__bookmark">
+            <i class="fas fa-heart"></i>
+          </div>
+        </div>
+
+        <div class="news-item flex justify-between items-center">
+          <div class="flex items-center">
+            <div class="news-item__points">
+              <p>200</p>
+              <span>points</span>
+            </div>
+
+            <div>
+              <h3>This is some test news</h3>
+              <p>posted by abc 8 hours ago | 18 comments</p>
+            </div>
+          </div>
+
+          <div class="news-item__bookmark">
+            <i class="fas fa-heart"></i>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p class="flex justify-center items-center">
+        Made with <i class="fas fa-heart fa-heart--red ml-2 mr-2"></i> by
+        <a class="ml-2" target="_blank" href="https://twitter.com/vinitraut18"
+          >Vinit Raut</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
