--- a/index.html
+++ b/index.html
@@ -26,81 +26,186 @@
   <body>
     <header class="header">
       <nav class="container flex justify-between items-center">
-        <h2>Hacker News</h2>
+        <div class="flex items-center">
+          <h2 class="logo">Hacker News</h2>
 
-        <ul class="flex">
-          <li>
-            <i class="fas fa-moon"></i>
-          </li>
-        </ul>
+          <div class="header__links">
+            <a href="#">new</a>
+            <a href="#">past</a>
+            <a href="#">comments</a>
+            <a href="#">ask</a>
+            <a href="#">show</a>
+            <a href="#">jobs</a>
+            <a href="#">submit</a>
+          </div>
+        </div>
+
+        <div class="logout">
+          <a href="#">logout</a>
+        </div>
       </nav>
     </header>
 
     <main class="container main">
-      <section class="news-lists">
-        <div class="news-item flex justify-between items-center">
-          <div class="flex items-center">
-            <div class="news-item__points">
-              <p>200</p>
-              <span>points</span>
-            </div>
-
-            <div>
-              <h3>This is some test news</h3>
-              <p>posted by abc 8 hours ago | 18 comments</p>
-            </div>
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>1</span>
+            <i class="fas fa-caret-up"></i>
           </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
 
-          <div class="news-item__bookmark">
-            <i class="fas fa-heart"></i>
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
           </div>
         </div>
+      </a>
 
-        <div class="news-item flex justify-between items-center">
-          <div class="flex items-center">
-            <div class="news-item__points">
-              <p>200</p>
-              <span>points</span>
-            </div>
-
-            <div>
-              <h3>This is some test news</h3>
-              <p>posted by abc 8 hours ago | 18 comments</p>
-            </div>
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>2</span>
+            <i class="fas fa-caret-up"></i>
           </div>
-
-          <div class="news-item__bookmark">
-            <i class="fas fa-heart"></i>
-          </div>
-        </div>
-
-        <div class="news-item flex justify-between items-center">
-          <div class="flex items-center">
-            <div class="news-item__points">
-              <p>200</p>
-              <span>points</span>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
             </div>
 
-            <div>
-              <h3>This is some test news</h3>
-              <p>posted by abc 8 hours ago | 18 comments</p>
-            </div>
-          </div>
-
-          <div class="news-item__bookmark">
-            <i class="fas fa-heart"></i>
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
           </div>
         </div>
-      </section>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>3</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>4</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>5</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>6</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>7</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
+
+
+      <a href="#" class="news">
+        <div class="flex news__item-parent">
+          <div class="news__number">
+            <span>8</span>
+            <i class="fas fa-caret-up"></i>
+          </div>
+          <div class="news__item">
+            <div class="flex items-center">
+              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
+              <a href="#" class="news__item-website">(zyppy.com)</a></span>
+            </div>
+
+            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
+          </div>
+        </div>
+      </a>
     </main>
 
-    <footer>
-      <p class="flex justify-center items-center">
-        Made with <i class="fas fa-heart fa-heart--red ml-2 mr-2"></i> by
-        <a class="ml-2" target="_blank" href="https://twitter.com/vinitraut18"
-          >Vinit Raut</a
-        >
-      </p>
-    </footer>
+    <footer class="flex flex-col container">
+      <ul class="flex">
+        <li><a href="#">Guidelines</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Lists</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Security</a></li>
+        <li><a href="#">Legal</a></li>
+        <li><a href="#">Apply to YC</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+      <div>
+        <label class="text-accent">Search:</label>
+        <input type="text" />
+      </div>
+    </foote>
   </body>
 </html>
