Fetch newsdata dynamically and DOM manipulation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -21,10 +23,10 @@
 
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Hacker News</title>
+    <title>DA - Hacker News</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <nav class="container flex justify-between items-center">
         <div class="flex items-center">
           <h2 class="logo">Hacker News</h2>
@@ -47,147 +49,7 @@
     </header>
 
     <main class="container main">
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>1</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>2</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>3</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>4</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>5</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>6</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>7</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
-
-
-      <a href="#" class="news">
-        <div class="flex news__item-parent">
-          <div class="news__number">
-            <span>8</span>
-            <i class="fas fa-caret-up"></i>
-          </div>
-          <div class="news__item">
-            <div class="flex items-center">
-              <p>We studied 81,000 Page Titles - Google Rewrote 61% of Them</p>
-              <a href="#" class="news__item-website">(zyppy.com)</a></span>
-            </div>
-
-            <div class="news__item-website">184 posts by <a href="#">abc</a> 1 hour ago | hide | <a href="#">92 comments</a></div>
-          </div>
-        </div>
-      </a>
+      <ul class="news__container"></ul>
     </main>
 
     <footer class="flex flex-col container">
@@ -206,6 +68,14 @@
         <label class="text-accent">Search:</label>
         <input type="text" />
       </div>
-    </foote>
+    </footer>
+
+    <script src="script.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+      integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </body>
 </html>
